# shikamo

./: LICENSE  README.md  package.yaml  shikamo.cabal  stack.yaml
src/Shikamo/Lang/: Expr.hs
src/Shikamo/Lexer/: Lexer.hs  Loc.hs
src/Shikamo/Parse/: Lexer.hs  Parser.hs
test/Shikamo/Lexer/: LexerSpec.hs
test/Shikamo/Parse/: LexerSpec.hs  ParserSpec.hs
