name:                shikamo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/smunix/shikamo#readme
license:             BSD3
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
copyright:           BSD
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable shikamo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shikamo
  default-language:    Haskell2010

test-suite shikamo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shikamo
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smunix/shikamo
